--- a/front_end_psel_wa/src/index.css
+++ b/front_end_psel_wa/src/index.css
@@ -1,10 +1,87 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.gradient {
+  background-image: linear-gradient(to bottom, rebeccapurple, steelblue, turquoise);
+  color: black;
+  background-clip: text;
+  -webkit-background-clip: text;
+
+  -webkit-text-fill-color: transparent;
+}
+.cabecalho {
+  background: linear-gradient(91.66deg, #d8ccbe 0%, #181616 90.32%);
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px, 50px;
+}
+
+.cabecalho span {
+  margin: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.filtrar-alunos, .tabela-alunos {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+}
+.filtrar-alunos {
+  position: relative;
+}
+
+.buscar {
+  all: unset;
+  display: flex;
+  text-align: left;
+  padding-left: 15px;
+  width: 470px;
+  height: 35px;
+  border-radius: 20px;
+  border: solid 1px #000000;
+}
+
+.filtrar-alunos img {
+  width: 25px;
+  height: 25px;
+
+  position: absolute;
+  right: 325px;
+  top: 6px;
+  cursor: pointer;
+}
+
+.tabela-alunos {
+  flex-direction: column;
+  align-items: center;
+}
+.aluno-resume-tr {
+  box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.aluno-resume-th, .aluno-resume-line-td {
+  width: 300px;
+  height: 45px;
+}
+
+.aluno-resume-th {
+  background: #FAFAFA;
+}
+
+.aluno-resume-line-td {
+  border-bottom: 1px solid #E0E0E0;
 }
 
 code {
