--- a/front_end_psel_wa/src/index.css
+++ b/front_end_psel_wa/src/index.css
@@ -4,93 +4,39 @@
   box-sizing: border-box;
 }
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-.gradient {
-  background-image: linear-gradient(to bottom, rebeccapurple, steelblue, turquoise);
-  color: black;
-  background-clip: text;
-  -webkit-background-clip: text;
-
-  -webkit-text-fill-color: transparent;
-}
-.cabecalho {
-  background: linear-gradient(91.66deg, #d8ccbe 0%, #181616 90.32%);
-  display: flex;
-  justify-content: flex-start;
-  padding: 20px, 50px;
-}
-
-.cabecalho span {
-  margin: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.filtrar-alunos, .tabela-alunos {
-  display: flex;
-  justify-content: center;
-  margin: 30px;
-}
-
-.filtrar-alunos .buscar, .filtrar-alunos button {
-  all: unset;
-  border: solid 0.1px #555555;
-  padding: 5px 10px;
-} 
-
-.filtrar-alunos .buscar {
-  display: flex;
-  text-align: left;
-  width: 470px;
-  height: 35px;
-  border-radius: 20px 0px 0px 20px;
-  border-right: none;
-}
-
-.filtrar-alunos button {
-  background: linear-gradient(91.26deg, #05EDE3 0%, #3A9FF1 97.77%);;
-  color: #FFFFFF;
-  font-size: 15px;
-  font-weight: bold;
-  border-radius: 0px 20px 20px 0px;
-  border-left: none;
-  cursor: pointer;
-}
-
-.filtrar-alunos button:hover {
-  background: linear-gradient(91.66deg, #FA8C10 0%, #FF576B 90.32%);
-}
-
-.tabela-alunos {
-  flex-direction: column;
-  align-items: center;
-  margin-top: 30px;
-}
-.aluno-resume-tr {
-  box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-}
-
-.aluno-resume-th, .aluno-resume-line-td {
-  width: 300px;
-  height: 45px;
-}
-
-.aluno-resume-th {
-  background: #FAFAFA;
-}
-
-.aluno-resume-line-td {
-  border-bottom: 1px solid #E0E0E0;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.c-loader {
+  display: flex;
+  justify-content: center;
+  animation: is-rotating 1s infinite;
+  border: 6px solid #e5e5e5;
+  border-top-color: #51d4db;
+  border-radius: 50%;
+  height: 60px;
+  width: 60px;
+}
+
+@keyframes is-rotating {
+  to {
+    transform: rotate(1turn);
+  }
 }
