melhorando mecanismo de pesuisa e adicionando botao voltar

--- a/front_end_psel_wa/src/componentes/InputPesquisar/styles.css
+++ b/front_end_psel_wa/src/componentes/InputPesquisar/styles.css
@@ -20,7 +20,7 @@
   }
   
   .filtrar-alunos button {
-    background: linear-gradient(91.26deg, #05EDE3 0%, #3A9FF1 97.77%);;
+    background: linear-gradient(91.26deg, #05EDE3 0%, #3A9FF1 97.77%);
     color: #FFFFFF;
     font-size: 15px;
     font-weight: bold;
